--- a/Dynamic-Resume-Builder/vercel.json
+++ b/Dynamic-Resume-Builder/vercel.json
@@ -1,3 +1,16 @@
 {
-    "outputDirectory": "dist"
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "Dynamic-Resume-Builder/dynamic.html",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/",
+        "dest": "/Dynamic-Resume-Builder/dynamic.html"
+      }
+    ]
+  }
+  
